k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: NodePort
  ports:
    - port: 4040
  selector:
    app: irazu
    tier: frontend
