k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
  name: irazu
  labels:
    app: irazu
spec:
  rules:
    - host: andrewgingrich.com
      http:
        paths:
          - backend:
              serviceName: frontend
              servicePort: 4040
            path: /
    - host: www.andrewgingrich.com
      http:
        paths:
          - backend:
              serviceName: frontend
              servicePort: 4040
            path: /
  tls:
    - hosts:
      - andrewgingrich.com
      - www.andrewgingrich.com
      secretName: irazu-tls
